# otus-10-finalwork

./: .gitignore  CMakeLists.txt  README.md  results.html
src/: main.cpp
test/: test.cpp
