cmake_minimum_required(VERSION 3.8)

project(otus_final_work CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

add_executable(main src/main.cpp)

if (MSVC)
    target_compile_options(main PUBLIC /W4)
else ()
    target_compile_options(main PUBLIC -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion)
endif ()